--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,11 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f2f2f2;
+/* 
+  background-color: rgb(255, 226, 18);;
+  background-color:  rgb(177, 255, 5);; */
+  background-color: rgb(0, 165, 100);;
+  /* background-color: rgb(255, 159, 16);; */
 }
 
 .auth-container {
@@ -55,7 +59,7 @@ input {
   margin: 0;
   width: 100%;
   height: 80px;
-  background-color: black;
+  background-color: rgb(0, 241, 76);;
   display: flex;
   justify-content: center;
   align-items: center;
