--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,48 @@
 
+:root {
+  --black: #171321;
+  --green: #21a743;
+  --lgreen: #00F14C;
+  --dkgreen: rgb(0, 165, 100);
+  --lorange: rgb(255, 226, 18);
+  --orange: rgb(255, 159, 16);
+  --font-size: 1.3rem;
+  --mono: "Oxygen mono", monospace;
+  --sans: Oxygen, sans-serif;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: var(--sans);
+  font-size: var(--font-size);
+}
 .App {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-body {
-  margin: 0;
-  padding: 0;
 }
 
 .auth {
+  margin: 1rem;
+  padding: 1rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-/* 
-  background-color: rgb(255, 226, 18);;
-  background-color:  rgb(177, 255, 5);; */
-  background-color: rgb(0, 165, 100);;
-  /* background-color: rgb(255, 159, 16);; */
+  gap: 2rem;
+  /* height: 100vh;  */
 }
 
 .auth-container {
@@ -30,12 +50,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 3rem;
   background-color: white;
-  border-radius: 5px;
+  border-radius: 1rem;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  margin: 20px;
-  width: 400px;
 }
 
 .form-group {
@@ -46,32 +64,37 @@ body {
 
 label {
   font-weight: bold;
-  margin-bottom: 5px;
+  margin-bottom: .5rem;
 }
 
 input {
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 5px;
+  padding: 1rem;
+  font-size: var(--font-size);
+  border-radius: 0.2rem;
 }
 
 .navbar {
-  margin: 0;
+  font-family: var(--mono);
+  padding: 4rem 1rem;
   width: 100%;
-  height: 80px;
-  background-color: rgb(0, 241, 76);;
+  background-color: var(--green);
+  list-style-type: none;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  color: white;
-  text-decoration: none;
+  gap: 2rem;
+
+ 
 }
 
-a {
+.navbar a {
   color: white;
   text-decoration: none;
-  margin: 10px;
-  font-size: 25px;
+
+}
+.navbar a:hover {
+  text-decoration:underline;
 }
 
 .create-recipe {
@@ -90,16 +113,17 @@ a {
   display: flex;
   flex-direction: column;
 }
-ul {
+.home ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-li {
+.home li {
   border: 1px solid black;
   padding: 10px;
   margin-bottom: 10px;
+
 }
 
 h2 {
@@ -119,4 +143,21 @@ img {
 p {
   max-width: 400px;
   font-size: 12px;
+}
+.footer {
+  text-align: center;
+  padding: 4rem 0;
+
+}
+
+.footer ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 2rem 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  gap: 3rem;
+  font-size: 3rem;
+
 }
