--- a/client/src/App.css
+++ b/client/src/App.css
@@ -283,9 +283,7 @@ input {
   background-color:  #1B1212;;
   width: 100%;
   color: white;
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9VgeZanZRQ6trXX_ww4chpGhbFHPv6NEcGsfa-mdihkUqJydZXl077nPvqVOrNxUh_V8&usqp=CAU");;
- 
-
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9VgeZanZRQ6trXX_ww4chpGhbFHPv6NEcGsfa-mdihkUqJydZXl077nPvqVOrNxUh_V8&usqp=CAU");
 }
 
 .footer ul {
