--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,15 +41,17 @@ body {
 /* auth page */
 
 .auth {
-  margin-top: 5rem;
-  margin-bottom: 10rem;
+  margin-top: 25;
+  margin-bottom: 25rem;
+  padding: 10rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
-  height: 150vh; 
+  gap: 15rem;
+  /* height: 150vh;  */
   color: var(--gren);
+
 }
 
 .auth-container {
@@ -61,11 +63,11 @@ body {
   align-items: center;
   padding: 4rem;
   background-color: white;
-  border-radius: 1rem;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+
 }
 .auth-container h2{
-  color: var(--green);
+  color: black;
   margin-bottom: 10rem;
 }
 
@@ -341,14 +343,18 @@ input {
 .icons {
   font-size: 1.5rem;
   text-decoration: none;
+  margin: 1rem;
+  padding: .4rem;
 }
 .icons:hover {
-  background-color: royalblue;
+
+  background-color: peru;
+
 }
 
 .fontfooer {
   font-size: small;
-  padding-top: 3rem;
+  padding: 3rem;
 
 }
 .outer {
@@ -479,12 +485,12 @@ input {
 }
 .white {
   color: white;
-  background-color: #000090;
+  background-color: royalblue;
   padding: .5rem;
 }
 .white:hover {
   background-color: white;
-  color: #000090;
+  color: royalblue;
 }
 .green {
   color: var(--green);
@@ -504,8 +510,7 @@ input {
 }
 
 div.logo:hover {
-  /* transform: rotate(20deg); */
-  transform: skewY(10deg);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 
